@@ -2,6 +2,8 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * Support binding on a specific IP in socket module (Daniel Poelzleithner
+													  <ctrlproxy@poelzi.org>)
  * Add support for unloading crashing modules
  * Use correct string comparison when necessary
  * Support 'true' RFC1459 string comparison
